Fix directory view overflow

--- a/client/style.css
+++ b/client/style.css
@@ -144,7 +144,7 @@ input::-webkit-input-placeholder { color: #999 }
 .content-container {
   position: relative;
   background: #111;
-  overflow: hidden;
+  overflow-x: hidden;
   flex: 1;
   order: 2;
 }
@@ -174,6 +174,7 @@ input::-webkit-input-placeholder { color: #999 }
   height: 100%;
   background: #111;
   position: absolute;
+  overflow: hidden;
 }
 
 .content.back    { z-index: 0; position:absolute; transform: translate3d(-100%,0,0) }
